styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Apply Muli Font */
body {
  font-family: 'Muli', sans-serif;
}

/* Navigation Bar */
.nav-container {
  height: 119px;
  width: 100%;
  background-color: black;
}

.logo {
  position: relative;
  top: 24px;
  left: 277px;
  width: 166px;
  height: 64px;
  color: white;
  font: normal normal 900 60px/75px Muli;
}

.logo span {
  font-weight: 900;
  font-size: 51px;
}

.nav-menu {
  position: relative;
  top: -24px;
  left: 50%;
  width: 603px;
  height: 30px;
  display: flex;
  flex-direction: row;
  list-style-type: none;
  justify-content: space-between;
  align-items: center;
}

.nav-item {
  color: white;
  display: flex;
  align-self: center;
  font: normal normal 600 24px/14px Muli;
}

/* Responsive styles */
@media (max-width: 755px) {
  .nav-menu {
    display: none;
    flex-direction: column;
    width: 100%;
    background-color: black;
    position: absolute;
    top: 100%;
    left: 0;
  }
  
  .nav-item {
    text-align: center;
    padding: 15px 0;
    border-top: 1px solid #444;
  }

  .navbar-toggle {
    display: block;
    background-color: gold;
    color: white;
    font-size: 67px;
    z-index: 2;
    padding: 10px;
    float: left;
    order: -1;
  }

  .nav-container {
    display: flex;
    background-color: red;
    position: relative;
  }

  .nav-menu.active {
    display: flex;
    background-color: green;
    height: fit-content;
    z-index: 3;
  }
}




/* notification banner */
.notification-banner {
  width: 100%;
  height: 88px;
  background-color: #EEEEEE;
  display: flex;
  justify-content: center;
}

.notification-banner p {
  font-size: 32px;
  top: 25px;
  white-space: nowrap;
  height: 100%;
  display: flex;
  align-items: center;
}

/* product line section */
.product-line {
  background-image: url('converter.png');
  background-repeat: no-repeat;
  height: 559px;
  width: 100%;
  clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 70% 100%, 0% 80%);      
  z-index: 1;
  background-size: 75%;
  overflow: visible;
  background-position: bottom 50% left -120%;
  background-color: black;
}

.product-line::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgb(0,0,0,0.5);
}

.product-line h1 {
  font-size: 95px;
  text-transform: uppercase;
  position: relative;
  left: 270px;
  top: 172px;
  height: 119px;
  color: #FFFFFF;
  letter-spacing: 0px;
  display: inline-block;
  white-space: nowrap;
  font-weight: 900;
}

.product-line h2 {
  height: 54px;
  position: relative;
  left: 270px;
  top: 172px;
  font: normal normal bold 43px/54px Muli;
  letter-spacing: 0px;
  color: #C4C4C4;
  width: min-content;
}

/* text section */
.text-section p {
  color: #333333;
  font-size: 26px;
  position: relative;
  left: 270px;
  height: 99px;
  width: 1380px;
  top: 116px;
  margin-bottom: 33px;
}

.text-section p:last-child {
  margin-bottom: 214px;
}

/* specs section */
.specs h1 {
  font-size: 72px;
  color: #BCBCBC;
  text-transform: capitalize;
  text-align: center;
  font-weight: 900;
}

.specs {
  height: 919px;
  background: linear-gradient(to bottom,rgba(255, 255, 255, 1), rgba(208, 208, 208, 1));
}

.specs-num {
  color: #9B9B9B;
  font-size: 37px;
  font-weight: 800;
}

.specs-title {
  color: #343434;
  font-size: 29px;
  font-weight: 900;
}

.specs-grid {
  display: grid;
  grid-template-rows: repeat(3, 1fr);
  grid-template-columns: repeat(4, 1fr);
  gap: 20px;
  width: 75%;
  height: 552px;
  margin: 71px 270px 136px 270px;
}

.specs-grid img {
  grid-column: span 2;
  grid-row: 1 / span 3;
  height: 552px;
  width: 638px;
}

.specs-grid div {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: 300px;
  border-bottom: 9px solid #F37421; 
}

.div-1 {
  grid-column: 1 / span 1;
  grid-row: 1 / span 1;
}

.div-2 {
  grid-column: 4 / span 1;
  grid-row: 1 / span 1;
}

.div-3 {
  grid-column: 1 / span 1;
  grid-row: 3 / span 1;
}

.div-4 {
  grid-column: 4 / span 1;
  grid-row: 3 / span 1;
}

/* section two */
.section-two {
  background: linear-gradient(to bottom,rgba(0, 0, 0, 1), rgba(46, 46, 46, 1));
  height: 551px;
}

.section-two h1 {
  font: normal normal bold 42px/53px Muli;
  color: #F37421;
  text-transform: uppercase;
  text-align: left;
  position: relative;
  display: inline-block;
  white-space: nowrap;
  top: 90px;
  left: 270px;
}

.section-two p {
  font: normal normal normal 26px/33px Muli;
  color: #FFFFFF;
  position: relative;
  top: 109px;
  left: 270px;
  right: 270px;
  max-width: calc(100% - 540px); /* 540px = 270px (left) + 270px (right) */
  height: 99px;
}

.section-two > p:first-of-type {
  margin-bottom: 59px;
}

/* gallery images */
.gallery {
  display: grid;
  grid-template-columns: 455px 455px 455px;
  grid-template-rows: 435px 435px;
  grid-gap: 17px;
  left: 270px;
  top: 68px;
  bottom: 68px;
  position: relative;
  width: min-content;
}

.gallery-container {
  width: 455px;
  height: 435px;
  display: flex;
  justify-content: center;
  align-items: center;
  background: transparent linear-gradient(180deg, #000000 0%, #403F3F 100%) 0% 0% no-repeat padding-box;
  border: 2px solid #B4B2B2;
}

.img-container {
  width: 395px;
  height: 342px;
  background: transparent url('converter.png') 0% 0% no-repeat padding-box;
}

.gallery-parent-container {
  height: 100%;
}

.gallery-item {
  background: #1C1C1C 0% 0% no-repeat padding-box;
  width: 455px;
  height: 435px;
  z-index: 2;
  overflow: visible;
  border: 2px solid #B4B2B2;
}

.gallery-item::before {
  content: "";
  position: absolute;
  width: 455px;
  height: 435px;
  background: transparent url('converter.png') 0% 0% no-repeat padding-box;
  mix-blend-mode: lighten;
  background-size: 125%;
  background-position: bottom 225% left 135%;
  z-index: 1;
  opacity: 0.5;
} 

.gallery-item p {
  color: #FFFFFF;
  font-size: 37px;
  position: relative;
  left: 32px;
  bottom: -275px;
  width: 392px;
  height: 138px;
  font-weight: 900;
  z-index: 3;
}

.gallery-item span {
  color: #F37421;
  z-index: 3;
}

/* final text section */
.end-section {
  position: relative;
  height: 551px;
  width: 100%;
  background-color: black;
  padding-top: 106px;
}

.bottom-half {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(180deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.8) 55%, rgba(0,0,0,0.3) 100%);
  background-blend-mode: multiply;
  z-index: 0;
}

.linear-gradient {
  position: absolute;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 50%;
  background: linear-gradient(180deg, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.8) 55%, rgba(0,0,0,0.3) 100%), url('bg-image.png') center/cover;
  background-blend-mode: multiply;
  z-index: 0;
}

.end-section h1 {
  font: normal normal bold 42px/53px Muli;
  letter-spacing: 0px;
  color: #F37421;
  text-transform: uppercase;
  position: relative;
  left: 270px;
  z-index: 1;
  display: inline-block;
  white-space: nowrap;
}

.end-section p {
  margin-top: 36px;
  color: white;
  max-width: calc(100% - 540px); /* 540px = 270px (left) + 270px (right) */
  position: relative;
  left: 270px;
  font: normal normal normal 26px/33px Muli;
  z-index: 1;
}

/* footer */
footer {
  background-color: #080808;
  height: 102px;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

footer p {
  text-align: center;
  font: normal normal normal 17px/18px Helvetica Neue;
  color: #666666;
}

